Fixed styles for asset page on mobile, fixed the download button issue

--- a/wp-content/themes/gowatch-child/style.css
+++ b/wp-content/themes/gowatch-child/style.css
@@ -149,11 +149,16 @@ input[type="range"]::-moz-range-thumb {
     font-size: 11px;
 }
 
+.ts-single-video .asset-metadata {
+    border-radius: 10px;
+}
+
 .asset-metadata .asset-metadata-inner {
     padding: 18px;
     background: #f9f9f9;
     font-size: 14px;
     margin-bottom: 20px;
+    border-radius: 10px;
 }
 .asset-metadata h4 {
     font-size: 15px;
@@ -754,6 +759,9 @@ popups
 .single.single-video .post-header {
     margin-bottom: 14px;
 }
+.single.single-video .post-meta .post-meta-author {
+    width: 60%;
+}
 .asset-action-buttons {
     margin-top: 14px;
 }
@@ -773,4 +781,54 @@ popups
     padding: 10px;
     width: 100%;
     height: 60px;
+}
+.single-video .post-event-links {
+    margin-top: 15px;
+}
+.single.single-video .single-post-tags ul {
+    margin-bottom: 0;
+}
+
+.ts-pricing-view article .read-more,
+.ts-pricing-view .featured .read-more:hover {
+    border-color: rgba(55,105,150,1) !important;
+    color: rgba(55,105,150,1) !important;
+    background: transparent !important;
+}
+
+.ts-pricing-view article .read-more:hover,
+.ts-pricing-view .featured .read-more {
+    border-color: transparent !important;
+    color: #FFF !important;
+    background: rgba(55,105,150,1) !important;
+}
+
+@media only screen and (max-width: 768px) {
+    .single-video .post-header .entry-meta-views {
+        margin-top: 0;
+        bottom: 0;
+        right: 0;
+        position: absolute;
+    }
+    .single.single-video .post-meta > div {
+        flex: 1;
+    }
+    .single.single-video .post-meta > div.post-meta-actions {
+        flex: 0 1 135px;
+        width: 135px;
+        margin-left: auto;
+        justify-content: flex-end;
+        text-align: right;
+    }
+    .single .post-meta .post-meta-actions > div.single-sharing {
+        float: none;
+    }
+    .single.single-video .post-meta .author_name {
+        font-size: 14px;
+        line-height: 1.4;
+        margin-top: -3px;
+    }
+    .ts-single-video .asset-metadata {
+        margin-top: 20px;
+    }
 }
